# 30122-project-codeconomics

./: README.md  map.html  pyproject.toml
business/: __main__.py  app.py  cleaning.py  utils.py
business/analyze/: aggregate_lat_long.py  business_outlook.py  merge_data.py  operating_time.py  survival.py
business/data/: crime.csv  crime.json  dummy_scatter.csv  median_income.csv
business/data/dummy/: business_data.csv  chicago_zipcodes.geojson
business/get_data/: census_api.py  get_chi_portal.py  utils.py
business/viz/: business_time_series.py  choropleth.py  contributor.py  histogram.py  plots.py  scatters.py  style.py  text_gis_3.txt
business/viz/dash_section/: business_time_series.py  choropleth.py  contributor.py  intro.py  scatters.py  style.py  survival_plot.py  text_gis_1.txt  text_gis_2.txt
milestones/: final.md  milestone1.md  milestone2.md
retail/: census.txt  census_api.py  crawler.py  utils.py  webscrape.py
retail/data/: boundaries.csv  licenses.json
