[project]
name = "business"
version = "0.1.0"
description = "Business Outlook in Windy City"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "altair>=5.5.0",
  "dash>=2.18.2",
  "geopandas>=1.0.1",
  "httpx>=0.28.1",
  "ipdb>=0.13.13",
  "ipython>=8.27.0",
  "lifelines>=0.30.0",
  "pandas>=2.2.3",
  "plotly>=6.0.0",
  "polars>=1.21.0",
  "pyarrow>=19.0.0",
  "pyshp>=2.3.1",
  "pytest>=8.3.4",
  "ruff>=0.6.4",
  "shapely>=2.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors - handles basic Python style
  "W", # pycodestyle warnings - handles whitespace issues
  "F", # pyflakes - handles unused imports and variables
  "N", # pep8-naming - handles naming conventions
]
ignore = [
  "F401", # allow unused imports (useful for assignments)
  "N818",
]
